--- a/index.html
+++ b/index.html
@@ -226,59 +226,81 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="co-sm-4 col-md-6 col-lg-7">
+          <div class="product-carousel" role="region">
+            <div class="product-carousel-slider">
+              <ol class="slider-list">
+                <li 
+                  classa="slider-item" 
+                  role="tabpanel" 
+                  aria-labelledby="product-carousel-tab-1">
+                  <figure>
+                    <img src="assets/images/img-product-01.jpg" alt="">
+                    <figcaption class="visually-hidden">보아르 전기히터 상세 이미지 1</figcaption>
+                  </figure>
+                </li>
+                <li 
+                  classa="slider-item" 
+                  role="tabpanel" 
+                  aria-labelledby="product-carousel-tab-2">
+                  <figure>
+                    <img src="assets/images/img-product-02.jpg" alt="">
+                    <figcaption class="visually-hidden">보아르 전기히터 상세 이미지 2</figcaption>
+                  </figure>
+                </li>
+                <li 
+                  classa="slider-item" 
+                  role="tabpanel" 
+                  aria-labelledby="product-carousel-tab-3">
+                  <figure>
+                    <img src="assets/images/img-product-03.jpg" alt="">
+                    <figcaption class="visually-hidden">보아르 전기히터 상세 이미지 3</figcaption>
+                  </figure>
+                </li>
+                <li 
+                  classa="slider-item" 
+                  role="tabpanel" 
+                  aria-labelledby="product-carousel-tab-4">
+                  <figure>
+                    <img src="assets/images/img-product-04.jpg" alt="">
+                    <figcaption class="visually-hidden">보아르 전기히터 상세 이미지 4</figcaption>
+                  </figure>
+                </li>
+              </ol>
+            </div>
+
+            <div class="product-carousel-thumbnail">
+              <ol class="thumbnail-list" role="tablist">
+                <li class="thumbnail-item" role="tab" id="product-carousel-tab-1">
+                  <button type="button">
+                    <img src="assets/images/img-product-01.jpg" alt="이미지 1">
+                  </button>
+                </li>
+                <li class="thumbnail-item" role="tab" id="product-carousel-tab-2">
+                  <button type="button">
+                    <img src="assets/images/img-product-02.jpg" alt="이미지 2">
+                  </button>
+                </li>
+                <li class="thumbnail-item" role="tab" id="product-carousel-tab-3">
+                  <button type="button">
+                    <img src="assets/images/img-product-03.jpg" alt="이미지 3">
+                  </button>
+                </li>
+                <li class="thumbnail-item" role="tab" id="product-carousel-tab-4">
+                  <button type="button">
+                    <img src="assets/images/img-product-04.jpg" alt="이미지 4">
+                  </button>
+                </li>
+              </ol>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
 
-    <div role="region">
-      <ol>
-        <li role="tabpanel" aria-labelledby="product-carousel-tab-1">
-          <figure>
-            <img src="assets/images/img-product-01.jpg" alt="">
-            <figcaption>보아르 전기히터 상세 이미지 1</figcaption>
-          </figure>
-        </li>
-        <li role="tabpanel" aria-labelledby="product-carousel-tab-2">
-          <figure>
-            <img src="assets/images/img-product-02.jpg" alt="">
-            <figcaption>보아르 전기히터 상세 이미지 2</figcaption>
-          </figure>
-        </li>
-        <li role="tabpanel" aria-labelledby="product-carousel-tab-3">
-          <figure>
-            <img src="assets/images/img-product-03.jpg" alt="">
-            <figcaption>보아르 전기히터 상세 이미지 3</figcaption>
-          </figure>
-        </li>
-        <li role="tabpanel" aria-labelledby="product-carousel-tab-4">
-          <figure>
-            <img src="assets/images/img-product-04.jpg" alt="">
-            <figcaption>보아르 전기히터 상세 이미지 4</figcaption>
-          </figure>
-        </li>
-      </ol>
 
-      <ol role="tablist">
-        <li role="tab" id="product-carousel-tab-1">
-          <button type="button">
-            <img src="assets/images/img-product-01.jpg" alt="이미지 1">
-          </button>
-        </li>
-        <li role="tab" id="product-carousel-tab-2">
-          <button type="button">
-            <img src="assets/images/img-product-02.jpg" alt="이미지 2">
-          </button>
-        </li>
-        <li role="tab" id="product-carousel-tab-3">
-          <button type="button">
-            <img src="assets/images/img-product-03.jpg" alt="이미지 3">
-          </button>
-        </li>
-        <li role="tab" id="product-carousel-tab-4">
-          <button type="button">
-            <img src="assets/images/img-product-04.jpg" alt="이미지 4">
-          </button>
-        </li>
-      </ol>
-    </div>
 
   </main>
 
