--- a/components.html
+++ b/components.html
@@ -1,142 +1,186 @@
-<div class="container">
-  <div class="div">
-    <strong class="tag-red visually-hidden">특가</strong>
-    <div class="tag-gray visually-hidden">무료배송</div>
-    <strong class="tag-green">첫 리뷰 두 배 적립</strong>
-  </div>
-  <div>
-    <div class="avatar-32">
-      <img src="assets/images/img-user-01.jpg" alt="4달라">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <div class="div">
+      <strong class="tag-red visually-hidden">특가</strong>
+      <div class="tag-gray visually-hidden">무료배송</div>
+      <strong class="tag-green">첫 리뷰 두 배 적립</strong>
     </div>
-    <div class="avatar-24">
-      <img src="assets/images/img-user-01.jpg" alt="4달라">
+    <div>
+      <div class="avatar-32">
+        <img src="assets/images/img-user-01.jpg" alt="4달라">
+      </div>
+      <div class="avatar-24">
+        <img src="assets/images/img-user-01.jpg" alt="4달라">
+      </div>
     </div>
-  </div>
-  <div>
-    <div class="star-rating-13">
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
+    <div>
+      <div class="star-rating-13">
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+      </div>
+      <div class="star-rating-16">
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+      </div>
+      <div class="star-rating-20">
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+      </div>
+      <div class="star-rating-24">
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+      </div>
     </div>
-    <div class="star-rating-16">
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
+    <div>
+      <div class="price-off">
+        <strong class="amount">40,000</strong>
+        <span class="currency">원</span>
+      </div>
+      <div class="price-16">
+        <strong class="amount">40,000</strong>
+        <span class="currency">원</span>
+      </div>
+      <div class="price-20">
+        <strong class="amount">40,000</strong>
+        <span class="currency">원</span>
+      </div>
+      <div class="price-32">
+        <strong class="amount">40,000</strong>
+        <span class="currency">원</span>
+      </div>
     </div>
-    <div class="star-rating-20">
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
+  
+    <div>
+      <button type="button" class="btn-primary btn-32">버어트은</button>
+      <button type="button" class="btn-secondary btn-32">버어트은</button>
+      <button type="button" class="btn-outlined btn-32">버어트은</button>
+      <button type="button" class="btn-ghost btn-32">버어트은</button>
     </div>
-    <div class="star-rating-24">
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
-      <i class="ic-star is-active"></i>
+    <div>
+      <button type="button" class="btn-primary btn-40">버어트은</button>
+      <button type="button" class="btn-secondary btn-40">버어트은</button>
+      <button type="button" class="btn-outlined btn-40">버어트은</button>
+      <button type="button" class="btn-ghost btn-40">버어트은</button>
     </div>
-  </div>
-  <div>
-    <div class="price-off">
-      <strong class="amount">40,000</strong>
-      <span class="currency">원</span>
+    <div>
+      <button type="button" class="btn-primary btn-48">버어트은</button>
+      <button type="button" class="btn-secondary btn-48">버어트은</button>
+      <button type="button" class="btn-outlined btn-48">버어트은</button>
+      <button type="button" class="btn-ghost btn-48">버어트은</button>
     </div>
-    <div class="price-16">
-      <strong class="amount">40,000</strong>
-      <span class="currency">원</span>
+    <div>
+      <button type="button" class="btn-primary btn-55">버어트은</button>
+      <button type="button" class="btn-secondary btn-55">버어트은</button>
+      <button type="button" class="btn-outlined btn-55">버어트은</button>
+      <button type="button" class="btn-ghost btn-55">버어트은</button>
     </div>
-    <div class="price-20">
-      <strong class="amount">40,000</strong>
-      <span class="currency">원</span>
+    <div>
+      <button type="button" class="btn-primary btn-55" disabled>버어트은</button>
+      <button type="button" class="btn-secondary btn-55" disabled>버어트은</button>
+      <button type="button" class="btn-outlined btn-55" disabled>버어트은</button>
+      <button type="button" class="btn-ghost btn-55" disabled>버어트은</button>
     </div>
-    <div class="price-32">
-      <strong class="amount">40,000</strong>
-      <span class="currency">원</span>
+  
+    <div>
+      <div class="select-group is-active">
+        <select class="form-select">
+          <option value="1">선택 사항 1</option>
+          <option value="2">선택 사항 2</option>
+          <option value="3">선택 사항 3</option>
+          <option value="4">선택 사항 4</option>
+          <option value="5">선택 사항 5</option>
+        </select>
+        <i class="ic-caret" aria-hidden></i>
+      </div>
+  
+      <div class="input-group">
+        <i class="ic-search"></i>
+        <input class="form-input" type="text" placeholder="스토어 검색">
+      </div>
     </div>
+  
+    <div>
+      <div class="pagination">
+        <button class="page-control page-prev" type="button">
+          <i class="ic-chevron"></i>
+        </button>
+        <ol class="page-list">
+          <li class="page-item">
+            <a href="/">1</a>
+          </li>
+          <li class="page-item">
+            <a href="/">2</a>
+          </li>
+          <li class="page-item">
+            <a href="/">3</a>
+          </li>
+          <li class="page-item">
+            <a href="/">4</a>
+          </li>
+          <li class="page-item is-active">
+            <a href="/">55</a>
+          </li>
+        </ol>
+        <button class="page-control page-next" type="button">
+          <i class="ic-chevron"></i>
+        </button>
+      </div>
+    </div>
+  
+  
   </div>
 
   <div>
-    <button type="button" class="btn-primary btn-32">버어트은</button>
-    <button type="button" class="btn-secondary btn-32">버어트은</button>
-    <button type="button" class="btn-outlined btn-32">버어트은</button>
-    <button type="button" class="btn-ghost btn-32">버어트은</button>
-  </div>
-  <div>
-    <button type="button" class="btn-primary btn-40">버어트은</button>
-    <button type="button" class="btn-secondary btn-40">버어트은</button>
-    <button type="button" class="btn-outlined btn-40">버어트은</button>
-    <button type="button" class="btn-ghost btn-40">버어트은</button>
-  </div>
-  <div>
-    <button type="button" class="btn-primary btn-48">버어트은</button>
-    <button type="button" class="btn-secondary btn-48">버어트은</button>
-    <button type="button" class="btn-outlined btn-48">버어트은</button>
-    <button type="button" class="btn-ghost btn-48">버어트은</button>
-  </div>
-  <div>
-    <button type="button" class="btn-primary btn-55">버어트은</button>
-    <button type="button" class="btn-secondary btn-55">버어트은</button>
-    <button type="button" class="btn-outlined btn-55">버어트은</button>
-    <button type="button" class="btn-ghost btn-55">버어트은</button>
-  </div>
-  <div>
-    <button type="button" class="btn-primary btn-55" disabled>버어트은</button>
-    <button type="button" class="btn-secondary btn-55" disabled>버어트은</button>
-    <button type="button" class="btn-outlined btn-55" disabled>버어트은</button>
-    <button type="button" class="btn-ghost btn-55" disabled>버어트은</button>
-  </div>
+    <header class="product-section-header">
+      <h1 class="title">섹션 타이틀</h1>
+    </header>
+  
+    <header class="product-section-header">
+      <h1 class="title">섹션 타이틀</h1>
+      <strong class="badge" aria-label="0개">0</strong>
+      <a class="text-button" href="/">버튼</a>
+    </header>
 
-  <div>
-    <div class="select-group is-active">
-      <select class="form-select">
-        <option value="1">선택 사항 1</option>
-        <option value="2">선택 사항 2</option>
-        <option value="3">선택 사항 3</option>
-        <option value="4">선택 사항 4</option>
-        <option value="5">선택 사항 5</option>
-      </select>
-      <i class="ic-caret" aria-hidden></i>
-    </div>
-
-    <div class="input-group">
-      <i class="ic-search"></i>
-      <input class="form-input" type="text" placeholder="스토어 검색">
-    </div>
-  </div>
-
-  <div>
-    <div class="pagination">
-      <button class="page-control page-prev" type="button">
-        <i class="ic-chevron"></i>
+    <header class="product-section-header">
+      <h1 class="title">섹션 타이틀</h1>
+      <strong class="badge" aria-label="0개">0</strong>
+      <button class="icon-button" type="button" aria-label="더보기">
+        <i class="ic-chevron" aria-hidden></i>
       </button>
-      <ol class="page-list">
-        <li class="page-item">
-          <a href="/">1</a>
-        </li>
-        <li class="page-item">
-          <a href="/">2</a>
-        </li>
-        <li class="page-item">
-          <a href="/">3</a>
-        </li>
-        <li class="page-item">
-          <a href="/">4</a>
-        </li>
-        <li class="page-item is-active">
-          <a href="/">55</a>
-        </li>
-      </ol>
-      <button class="page-control page-next" type="button">
-        <i class="ic-chevron"></i>
+    </header>
+
+    <header class="product-section-header">
+      <h1 class="title">섹션 타이틀</h1>
+      <strong class="badge" aria-label="0개">0</strong>
+      <button class="icon-button is-right" type="button" aria-label="더보기">
+        <i class="ic-chevron" aria-hidden></i>
       </button>
-    </div>
+    </header>
   </div>
-
-
-</div>
+</body>
+</html>
