--- a/components.html
+++ b/components.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="container">
     <div class="div">
@@ -74,7 +76,7 @@
         <span class="currency">원</span>
       </div>
     </div>
-  
+
     <div>
       <button type="button" class="btn-primary btn-32">버어트은</button>
       <button type="button" class="btn-secondary btn-32">버어트은</button>
@@ -105,7 +107,7 @@
       <button type="button" class="btn-outlined btn-55" disabled>버어트은</button>
       <button type="button" class="btn-ghost btn-55" disabled>버어트은</button>
     </div>
-  
+
     <div>
       <div class="select-group is-active">
         <select class="form-select">
@@ -117,13 +119,13 @@
         </select>
         <i class="ic-caret" aria-hidden></i>
       </div>
-  
+
       <div class="input-group">
         <i class="ic-search"></i>
         <input class="form-input" type="text" placeholder="스토어 검색">
       </div>
     </div>
-  
+
     <div>
       <div class="pagination">
         <button class="page-control page-prev" type="button">
@@ -151,15 +153,15 @@
         </button>
       </div>
     </div>
-  
-  
+
+
   </div>
 
   <div>
     <header class="product-section-header">
       <h1 class="title">섹션 타이틀</h1>
     </header>
-  
+
     <header class="product-section-header">
       <h1 class="title">섹션 타이틀</h1>
       <strong class="badge" aria-label="0개">0</strong>
@@ -182,5 +184,35 @@
       </button>
     </header>
   </div>
+
+  <div>
+    <table class="product-table">
+      <tbody>
+        <tr>
+          <th scope="row">배송</th>
+          <td>일반택배</td>
+        </tr>
+        <tr>
+          <th scope="row">반품배송비</th>
+          <td>2,500원 (최초 배송비가 무료인 경우 5,000원 부과)</td>
+        </tr>
+        <tr>
+          <th scope="row">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate atque dicta soluta labore, sed aut. Officia dolor, fuga voluptate magnam, optio maiores tempore commodi provident ipsa corporis iusto facere sit.</th>
+          <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe perspiciatis at magni facere possimus sunt quo, minima iste ipsam nesciunt laborum? Beatae aspernatur nostrum amet tempora praesentium molestias similique consequuntur!
+          Excepturi magnam sit laborum eos commodi ab totam in, nesciunt amet veniam quos sint dolor vitae ut, hic voluptates facilis non ea inventore officia! Ipsam voluptatibus ut voluptates quidem harum.
+          Voluptates provident velit debitis quia fugiat est exercitationem natus possimus repellendus autem, explicabo iste at? Temporibus molestias, consequuntur corporis non voluptatem accusamus, voluptates nulla quibusdam, nisi blanditiis saepe pariatur laudantium!
+          Omnis exercitationem praesentium necessitatibus obcaecati iste quidem dolor, repellendus a dolorum aspernatur enim quam illum voluptatem animi aliquid! Et possimus praesentium sit molestias! Minima, dolorem veritatis cumque molestias placeat ipsum.
+          Autem hic tempore amet quod quis quasi velit esse assumenda animi, voluptate eos porro doloribus vitae corrupti cupiditate consequatur sapiente, aperiam quae? Explicabo dolorum iste, incidunt aliquam deleniti minus in.
+          Assumenda iusto ducimus ullam mollitia deserunt! A voluptatibus suscipit et perspiciatis eligendi voluptas ratione modi? Nemo tempore quas corporis ipsam unde autem, dolor maxime necessitatibus sit ipsa dolorum explicabo dicta.
+          Animi enim sint eum nam sapiente? Harum nemo consequatur quos iusto, est aliquid eaque nulla maxime? Ipsa error soluta similique vel ipsam in accusamus, consequatur culpa facilis blanditiis perferendis voluptates?
+          Inventore fugiat quaerat cum illo error nemo blanditiis eveniet laboriosam hic quis mollitia, voluptates alias quibusdam ut dolore corrupti dolorum cupiditate deleniti quasi? Culpa obcaecati earum laboriosam quibusdam eligendi fugiat.
+          Nihil adipisci rerum possimus eaque vel porro dignissimos nulla commodi, cum quibusdam necessitatibus omnis facilis. Architecto, libero esse! Beatae aspernatur aut et laborum tempore explicabo quis animi assumenda consequuntur temporibus?
+          Facilis ullam similique fugit laudantium magni placeat dignissimos adipisci, magnam quam? Nam, ut placeat. Repellendus beatae dicta molestiae obcaecati voluptatibus perspiciatis sapiente vero omnis eaque deserunt autem eligendi, possimus qui?</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
 </body>
+
 </html>
