--- a/index.html
+++ b/index.html
@@ -487,9 +487,9 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4 col-lg-8">
-          <section class="product-section product-spec" id="product-spec" role="tabpanel">
-            <header class="product-section-header">
-              <h1 class="title sm-hidden">상품 정보</h1>
+          <section class="product-section product-spec is-open" id="product-spec" role="tabpanel">
+            <header class="product-section-header sm-hidden">
+              <h1 class="title">상품 정보</h1>
             </header>
 
             <div class="product-section-content">
