--- a/index.html
+++ b/index.html
@@ -487,7 +487,10 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4 col-lg-8">
-          <section class="product-section product-spec is-open" id="product-spec" role="tabpanel">
+          <section 
+          class="product-section product-spec is-open" 
+          id="product-spec" 
+          role="tabpanel">
             <header class="product-section-header sm-hidden">
               <h1 class="title">상품 정보</h1>
             </header>
@@ -579,6 +582,63 @@
             </div>
           </section>
           <div class="product-section-divider sm-only" aria-hidden></div>
+
+          <section 
+          class="product-section product-review" id="product-review" 
+          role="tabpanel">
+  
+          <header class="product-section-header">
+              <h1 class="title">리뷰</h1>
+              <strong class="badge" aria-label="556개">556</strong>
+              <a class="text-button" href="/">리뷰쓰기</a>
+            </header>
+
+            <div class="product-section-content">
+              <div class="review-scoreboard">
+                <div class="score-summary">
+                  <strong class="average-score" aria-label="평점 4.8">
+                    4.8
+                  </strong>
+                  <div class="star-rating">
+                    <i class="ic-star is-active"></i>
+                    <i class="ic-star is-active"></i>
+                    <i class="ic-star is-active"></i>
+                    <i class="ic-star is-active"></i>
+                    <i class="ic-star is-active"></i>
+                  </div>
+                </div>
+                <div class="score-detail">
+                  <dl class="score-stats-list">
+                    <div class="score-stats-item is-active">
+                      <dt>
+                        5점
+                      </dt>
+                      <dd>
+                        <div class="bar-graph" aria-hidden>
+                          <div class="active-bar"></div>
+                        </div>
+                        <strong class="count" aria-label="467명">467</strong>
+                      </dd>
+                    </div>
+
+                    <div class="score-stats-item">
+                      <dt>
+                        4점
+                      </dt>
+                      <dd>
+                        <div aria-hidden>
+                          <div class="active-bar"></div>
+                        </div>
+                        <strong class="count" aria-label="87명">87</strong>
+                      </dd>
+                    </div>
+                  </dl>
+                </div>
+              </div>
+            </div>
+          </section>
+          <div class="product-section-divider sm-only" aria-hidden></div>
+
         </div>
       </div>
     </div>
