--- a/index.html
+++ b/index.html
@@ -514,6 +514,66 @@
                   </div>
                   </div>
                 </li>
+                <li>
+                  <div class="gallery-card">
+                    <figure class="gallery-card-image">
+                      <img src="./assets/images/img-review-02.jpg" alt="">
+                      <figcaption class="visually-hidden">유저2 님의 스타일링샷</figcaption>
+                    </figure>
+                    <div class="gallery-card-detail">
+                      <a class="avatar-32" href="/">
+                      <img src="assets/images/img-user-02.jpg" alt="4달라">
+                    </a>
+                    <a class="username" href="/">유저2</a>
+                    <span class="order">2/461</span>
+                  </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="gallery-card">
+                    <figure class="gallery-card-image">
+                      <img src="./assets/images/img-review-03.jpg" alt="">
+                      <figcaption class="visually-hidden">유저3 님의 스타일링샷</figcaption>
+                    </figure>
+                    <div class="gallery-card-detail">
+                      <a class="avatar-32" href="/">
+                      <img src="assets/images/img-user-03.jpg" alt="4달라">
+                    </a>
+                    <a class="username" href="/">유저3</a>
+                    <span class="order">3/461</span>
+                  </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="gallery-card">
+                    <figure class="gallery-card-image">
+                      <img src="./assets/images/img-review-04.jpg" alt="">
+                      <figcaption class="visually-hidden">유저4 님의 스타일링샷</figcaption>
+                    </figure>
+                    <div class="gallery-card-detail">
+                      <a class="avatar-32" href="/">
+                      <img src="assets/images/img-user-default.png" alt="4달라">
+                    </a>
+                    <a class="username" href="/">유저4</a>
+                    <span class="order">4/461</span>
+                  </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="gallery-card">
+                    <figure class="gallery-card-image">
+                      <img src="./assets/images/img-review-05.jpg" alt="">
+                      <figcaption class="visually-hidden">유저5 님의 스타일링샷</figcaption>
+                    </figure>
+                    <div class="gallery-card-detail">
+                      <a class="avatar-32" href="/">
+                      <img src="assets/images/img-user-default.png" alt="4달라">
+                    </a>
+                    <a class="username" href="/">유저5</a>
+                    <span class="order">5/461</span>
+                  </div>
+                  </div>
+                </li>
               </ol>
             </div>
           </section>
