--- a/index.html
+++ b/index.html
@@ -498,83 +498,88 @@
             </header>
 
             <div class="product-section-content">
-              <ol>
-                <li>
-                  <div class="gallery-card">
-                    <figure class="gallery-card-image">
-                      <img src="./assets/images/img-review-01.jpg" alt="">
-                      <figcaption class="visually-hidden">유저1 님의 스타일링샷</figcaption>
-                    </figure>
-                    <div class="gallery-card-detail">
-                      <a class="avatar-32" href="/">
-                      <img src="assets/images/img-user-01.jpg" alt="4달라">
-                    </a>
-                    <a class="username" href="/">유저1</a>
-                    <span class="order">1/461</span>
-                  </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="gallery-card">
-                    <figure class="gallery-card-image">
-                      <img src="./assets/images/img-review-02.jpg" alt="">
-                      <figcaption class="visually-hidden">유저2 님의 스타일링샷</figcaption>
-                    </figure>
-                    <div class="gallery-card-detail">
-                      <a class="avatar-32" href="/">
-                      <img src="assets/images/img-user-02.jpg" alt="4달라">
-                    </a>
-                    <a class="username" href="/">유저2</a>
-                    <span class="order">2/461</span>
-                  </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="gallery-card">
-                    <figure class="gallery-card-image">
-                      <img src="./assets/images/img-review-03.jpg" alt="">
-                      <figcaption class="visually-hidden">유저3 님의 스타일링샷</figcaption>
-                    </figure>
-                    <div class="gallery-card-detail">
-                      <a class="avatar-32" href="/">
-                      <img src="assets/images/img-user-03.jpg" alt="4달라">
-                    </a>
-                    <a class="username" href="/">유저3</a>
-                    <span class="order">3/461</span>
-                  </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="gallery-card">
-                    <figure class="gallery-card-image">
-                      <img src="./assets/images/img-review-04.jpg" alt="">
-                      <figcaption class="visually-hidden">유저4 님의 스타일링샷</figcaption>
-                    </figure>
-                    <div class="gallery-card-detail">
-                      <a class="avatar-32" href="/">
-                      <img src="assets/images/img-user-default.png" alt="4달라">
-                    </a>
-                    <a class="username" href="/">유저4</a>
-                    <span class="order">4/461</span>
-                  </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="gallery-card">
-                    <figure class="gallery-card-image">
-                      <img src="./assets/images/img-review-05.jpg" alt="">
-                      <figcaption class="visually-hidden">유저5 님의 스타일링샷</figcaption>
-                    </figure>
-                    <div class="gallery-card-detail">
-                      <a class="avatar-32" href="/">
-                      <img src="assets/images/img-user-default.png" alt="4달라">
-                    </a>
-                    <a class="username" href="/">유저5</a>
-                    <span class="order">5/461</span>
-                  </div>
-                  </div>
-                </li>
-              </ol>
+              <div class="user-gallery" role="region">
+                <div class="user-gallery-slider">
+                  <ol class="slider-list">
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-01.jpg" alt="">
+                          <figcaption class="visually-hidden">유저1 님의 스타일링샷</figcaption>
+                        </figure>
+                        <div class="gallery-card-detail">
+                          <a class="avatar-32" href="/">
+                          <img src="assets/images/img-user-01.jpg" alt="4달라">
+                        </a>
+                        <a class="username" href="/">유저1</a>
+                        <span class="order">1/461</span>
+                      </div>
+                      </div>
+                    </li>
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-02.jpg" alt="">
+                          <figcaption class="visually-hidden">유저2 님의 스타일링샷</figcaption>
+                        </figure>
+                        <div class="gallery-card-detail">
+                          <a class="avatar-32" href="/">
+                          <img src="assets/images/img-user-02.jpg" alt="4달라">
+                        </a>
+                        <a class="username" href="/">유저2</a>
+                        <span class="order">2/461</span>
+                      </div>
+                      </div>
+                    </li>
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-03.jpg" alt="">
+                          <figcaption class="visually-hidden">유저3 님의 스타일링샷</figcaption>
+                        </figure>
+                        <div class="gallery-card-detail">
+                          <a class="avatar-32" href="/">
+                          <img src="assets/images/img-user-03.jpg" alt="4달라">
+                        </a>
+                        <a class="username" href="/">유저3</a>
+                        <span class="order">3/461</span>
+                      </div>
+                      </div>
+                    </li>
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-04.jpg" alt="">
+                          <figcaption class="visually-hidden">유저4 님의 스타일링샷</figcaption>
+                        </figure>
+                        <div class="gallery-card-detail">
+                          <a class="avatar-32" href="/">
+                          <img src="assets/images/img-user-default.png" alt="4달라">
+                        </a>
+                        <a class="username" href="/">유저4</a>
+                        <span class="order">4/461</span>
+                      </div>
+                      </div>
+                    </li>
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-05.jpg" alt="">
+                          <figcaption class="visually-hidden">유저5 님의 스타일링샷</figcaption>
+                        </figure>
+                        <div class="gallery-card-detail">
+                          <a class="avatar-32" href="/">
+                          <img src="assets/images/img-user-default.png" alt="4달라">
+                        </a>
+                        <a class="username" href="/">유저5</a>
+                        <span class="order">5/461</span>
+                      </div>
+                      </div>
+                    </li>
+                  </ol>
+                </div>
+                <div class="user-gallery-thumbnail"></div>
+              </div>
             </div>
           </section>
 
