--- a/index.html
+++ b/index.html
@@ -578,7 +578,35 @@
                     </li>
                   </ol>
                 </div>
-                <div class="user-gallery-thumbnail"></div>
+                <div class="user-gallery-thumbnail">
+                  <ol class="thumbnail-list">
+                    <li class="thumbnail-item">
+                      <button type="button">
+                        <img src="./assets/images/img-review-01.jpg" alt="01번 사진">
+                      </button>
+                    </li>
+                    <li class="thumbnail-item">
+                      <button type="button">
+                        <img src="./assets/images/img-review-02.jpg" alt="02번 사진">
+                      </button>
+                    </li>
+                    <li class="thumbnail-item">
+                      <button type="button">
+                        <img src="./assets/images/img-review-03.jpg" alt="03번 사진">
+                      </button>
+                    </li>
+                    <li class="thumbnail-item">
+                      <button type="button">
+                        <img src="./assets/images/img-review-04.jpg" alt="04번 사진">
+                      </button>
+                    </li>
+                    <li class="thumbnail-item">
+                      <button type="button">
+                        <img src="./assets/images/img-review-05.jpg" alt="05번 사진">
+                      </button>
+                    </li>
+                  </ol>
+                </div>
               </div>
             </div>
           </section>
